Use the new reverse regex engine